# survival-alpha

./: .editorconfig  .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
convert/: README.md
docs/: TODO.md
docs/examples/: [SA-TEST 01] SMA Crossover.pine  [SA-TEST 02] EMA Crossover.pine  [SA-TEST 03] RSI Reversal.pine  sma_cross.pine
survival_alpha/: __init__.py  __main__.py  branding.py  cli.py  hygiene.py  loaders.py  metrics.py  report.py
survival_alpha/converter/: __init__.py  cli_view.py  differ.py  parser.py  runner.py  translator.py
tests/: conftest.py  test_converter.py  test_hygiene.py  test_loaders.py  test_metrics.py
