[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survival-alpha"
version = "0.1.0"
description = "Backtest hygiene for retail quants. Your backtest is lying to you. This library catches it."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "DurdenBTC"}]
keywords = ["backtesting", "trading", "quantitative", "tradingview", "hygiene"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "click>=8.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/durdenbtc/survival-alpha"
Repository = "https://github.com/durdenbtc/survival-alpha"

[project.scripts]
sa = "survival_alpha.cli:cli"
survival-alpha = "survival_alpha.cli:cli"

[tool.setuptools.packages.find]
include = ["survival_alpha*"]
